#/********************************************************************
# libonvif/onvif-gui/pyproject.toml
#
# Copyright (c) 2023, 2024  Stephen Rhodes
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
#*********************************************************************/

[project]
name = "onvif-gui" 
version = "2.2.9"
dynamic = ["gui-scripts"]
description = "A client gui for Onvif"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["sample", "setuptools", "development"]
authors = [
  {name = "Stephen Rhodes", email = "sr99622@gmail.com" }
]
classifiers = [ 
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
]

dependencies = [
  'libonvif==3.2.2', 'avio==3.2.1', 'liblivemedia==1.0.3', 'numpy', 'loguru', 
  'opencv-python', 'PyQt6-Qt6', 'pyqt6'
]

[project.urls]  
"Homepage" = "https://github.com/sr99622/libonvif"
"Bug Reports" = "https://github.com/sr99622/libonvif/issues"

[tool.setuptools]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"